chore: refactor links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </main>
   <footer>
-    <p>Created with <i class="fas fa-heart"></i> by <a href="http://github.com/chocotacove" target="_blank">Vishal Hosamani</a></p>
+    <p>Created with <i class="fas fa-heart"></i> by <a href="http://github.com/vshalt" target="_blank">Vishal Hosamani</a></p>
   </footer>
 </body>
 
